[package]
name = "kelp"
version = "0.1.5"
authors = ["VishalVSV <vishalsvetrivel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
unicode-width = "0.1.8"
serde_json = "1.0"
serde_derive = "1.0.123"
serde = "1.0.123"
unescape = "0.1.0"